# mqtt-camera-server

./: .gitignore  Cargo.toml
camera-driver/: Cargo.toml
camera-driver/src/: interface.rs  lib.rs  mock.rs  svb_camera.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs  mqtt.rs  server.rs  server2.rs
