# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = [
    "camera-driver",
    "core",

   # "camera-driver/svb-camera-rs",

]





