[package]
name = "camera-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svbony-camera-rs ={ path = "./svb-camera-rs"}
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
rand="0.8.5"
