[package]
name = "core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "core"
path = "src/server2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

futures = "0.3.28"
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.4"
camera-driver={path="../camera-driver"}
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
rumqttc = "0.22.0"





